k8s/platform/components/data-services/redis/redis-insight-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redis-insight-route
  namespace: event-management
  labels:
    part-of: microservices-platform
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`redis-insight.desarrollo`)
      kind: Rule
      services:
        - name: redis-insight
          port: 5540
